<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/back_right"
            android:onClick="onClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="预诊对象"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/back_right"
            android:onClick="onClick" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/reg_edittext_bg"
            android:hint="@string/name"
            android:padding="5dp" />

        <EditText
            android:id="@+id/et_sex"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/reg_edittext_bg"
            android:hint="@string/sex"
            android:padding="5dp" />

        <EditText
            android:id="@+id/et_birthday"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/reg_edittext_bg"
            android:hint="@string/birthday"
            android:inputType="textPassword"
            android:padding="5dp" />

        <EditText
            android:id="@+id/et_Departments"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/reg_edittext_bg"
            android:hint="@string/Departments"
            android:padding="5dp" />

        <Button
            android:id="@+id/btn_sure_add"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="25dp"
            android:background="#46D4AE"
            android:text="@string/sure_add"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>