<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="cn.net_show.customer.activity.OpenVipActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/back_right"
            android:onClick="onClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/newMessageNotification"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_half" >

        <TextView
            android:id="@+id/tv_newMess"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/newMessageNotification"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cb_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_checkbtn"
            android:button="@null"
            android:checked="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/newMessnoti_01"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/white_half" >

        <TextView
            android:id="@+id/tv_notishowMessDeti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/notiShowMessDetial"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_checkbtn"
            android:button="@null"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/newMessnoti_02"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/white_half" >

        <TextView
            android:id="@+id/tv_voice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/voice"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_checkbtn"
            android:button="@null"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_half" >

        <TextView
            android:id="@+id/tv_shock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/shock"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_checkbtn"
            android:button="@null"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/newMessnoti_03"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>